# SeniorProject

./: .gitignore  HOW_TO_SETUP_IN_RASP4.md  MainSystem.py  README.md  SoundTracker.py  biome.json  env.example  main.py  package-lock.json  package.json  pyproject.toml  requirements.pi.txt  requirements.txt
.github/workflows/: release-raspi-arm.yml
scripts/: setup_pi.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/rose_chat/: __init__.py  __main__.py  api.py  app.py  config.py  doctor.py  rooms.py  voice_cli.py
web/: index.html
web/css/: avatar.css  base.css  layout.css  panel.css
web/js/: app.js  audio.js  avatar.js  config.js  dom.js  mouth-animation.js  state.js  tauri-bridge.js  ui.js  voice.js
