[package]
name = "rose-chat"
version = "0.1.0"
description = "Rose voice chat desktop app"
authors = ["Rose Chat"]
edition = "2021"

[lib]
name = "rose_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
cpal = "0.15.3"
dotenvy = "0.15.7"
hound = "3.5.1"
open = "5.3.2"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.9.5", features = [] }
uuid = { version = "1.18.1", features = ["v4"] }
